chore: delete deprecated fields from EngineStatus (#917)
