# api/v1/inference_server_worker.swagger.json
@@ -178,18 +178,6 @@
         }
       }
     },
-    "EngineStatusSyncStatus": {
-      "type": "object",
-      "properties": {
-        "inProgressModelIds": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "in_progress_model_ids is a list of model ids that are currently being synced."
-        }
-      }
-    },
     "ResponseFormatJsonSchema": {
       "type": "object",
       "properties": {
@@ -433,15 +421,6 @@
       "properties": {
         "engineId": {
           "type": "string"
-        },
-        "modelIds": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "syncStatus": {
-          "$ref": "#/definitions/EngineStatusSyncStatus"
         },
         "ready": {
           "type": "boolean"
